--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.0.1-fancykoala",
+  "version": "1.0.2-redpelican",
   "description": "",
   "main": "main.js",
   "scripts": {
