--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.0.4-graciousdeer",
+  "version": "1.0.5-criticalfalcon",
   "description": "",
   "main": "main.js",
   "scripts": {
