--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.1.0-rapidhare",
+  "version": "1.1.1-dangerousape",
   "description": "",
   "main": "main.js",
   "scripts": {
