--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "barfy-cli",
-  "version": "1.1.1-dangerousape",
+  "version": "1.1.2-cleverleopard",
   "description": "",
-  "main": "main.js",
+  "main": "bin/barfy",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
