--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.1.3-dizzymandrill",
+  "version": "1.1.4-proudparrot",
   "description": "",
   "main": "bin/barfy",
   "scripts": {
