--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.3.1-fastbadger",
+  "version": "1.4.0-hoarsesquirrel",
   "description": "",
   "main": "bin/barfy",
   "scripts": {
