--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barfy-cli",
-  "version": "1.5.0-electricmandrill",
+  "version": "1.5.1-vaguewolf",
   "description": "",
   "main": "bin/barfy",
   "scripts": {
